# terexov

./: .flake8  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  requirements_dev.txt
alembic/: env.py
alembic/versions/: 9bcad76b6e42_add_currency_table.py  bf7b2e016054_add_name_field.py
src/apps/api/: urls.py
src/apps/api/v1/: currencies.py
src/apps/db/: currency.py
src/apps/models/: currency.py
src/apps/schemas/: currency.py
src/apps/services/: currency.py
src/apps/tasks/: currency.py
src/core/: celery_config.py  config.py
src/db/: base_crud.py  session.py
