[tool.poetry]
name = "terexov"
version = "0.1.0"
description = ""
authors = ["Konstantin Vasilyev <k.vasilyev@itfactory.su>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
aiohttp = "^3.9.5"
alembic = "^1.13.2"
fastapi-pagination = "^0.12.25"
sqlmodel = "^0.0.19"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
pydantic = "^2.7.4"
uvicorn = "^0.30.1"
inflection = "^0.5.1"
celery = "^5.4.0"
redis = "^5.0.7"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
